--- a/app/src/main/res/layout/draw_path_1.xml
+++ b/app/src/main/res/layout/draw_path_1.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.yiyue.study.view.DrawRoundRectView
+    <com.yiyue.study.view.DrawPathView1
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
